tests/miz/fail/types/fail_type_elaboration_set_enumeration_formula_gap_001.miz
theorem SetEnumerationPayloadBoundary: {1, 2} = {1, 2};
